Update index and macros.tex

--- a/materials/section/linear.tex
+++ b/materials/section/linear.tex
@@ -6,28 +6,10 @@
 \usepackage{tikz}
 \usepackage{pgfplots}
 
-\newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
-\newcommand{\1}{\mathbf{1}}
-\newcommand{\tr}{\mathrm{tr}}
-\newcommand{\0}{\mathbf{0}}
-\newcommand{\xx}{\mathbf{x}}
-\newcommand{\ii}{\mathbf{i}}
-\newcommand{\yy}{\mathbf{y}}
-\newcommand{\ww}{\mathbf{w}}
-\newcommand{\uu}{\mathbf{u}}
-\renewcommand{\aa}{\mathbf{a}}
-\newcommand{\bb}{\mathbf{b}}
-\newcommand{\cc}{\mathbf{c}}
-\newcommand{\pp}{\mathbf{p}}
-\newcommand{\RR}{\mathbb{R}}
-\newcommand{\CC}{\mathbb{C}}
-\renewcommand{\SS}{\mathbb{S}}
-\renewcommand{\aa}{\mathbf{a}}
-\newcommand{\T}{\top}
-\newcommand{\rank}{\mathrm{rank}}
-\newcommand{\argmin}{\mathrm{argmin}}
+\input{macros.tex}
 
-\newcommand{\m}[1]{\begin{bmatrix} #1 \end{bmatrix}}
+\newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
+\newcommand{\rank}{\mathrm{rank}}
 
 \setlength{\parindent}{0pt}
 
