Started convex.tex. Finished convex sets portion

--- a/materials/section/macros.tex
+++ b/materials/section/macros.tex
@@ -1,6 +1,16 @@
+% Theorems
+\usepackage{amsthm}
+\renewcommand\qedsymbol{$\blacksquare$}
+
+\newtheorem{definition}{Definition}[section]
+\newtheorem{example}{Example}[section]
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{lemma}[theorem]{Lemma}
+
+
 % Linear Algebra %
 
-%
 \setlength\unitlength{1mm}
 
 \newcommand{\insertfig}[3]{
